--- a/backend/templates/next.html
+++ b/backend/templates/next.html
@@ -63,7 +63,7 @@
         <h2>Order Successful</h2>
         <p>Thank you for your order!</p>
         <p>Your order has been successfully placed.</p>
-        <a href="http://localhost:5173/home" class="btn">Go to Home</a>
+        <a href="https://quicktrip-1.onrender.com/home" class="btn">Go to Home</a>
     </div>
 </body>
 </html>
